# crewAI

aecho_research/: README.md  pyproject.toml
aecho_research/src/aecho_research/: crew.py  main.py
